# tablestakes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  fastmcp.json  pyproject.toml  server.json
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
scripts/: experiment_create.py  experiment_sort.py  script.py
src/tablestakes/: __init__.py  __main__.py  converter.py  hasher.py  models.py  parser.py  server.py
src/tablestakes/tools/: column.py  read.py  write.py
tests/: conftest.py  test_bug_fixes.py  test_concurrency.py  test_converter.py  test_edge_cases.py  test_hasher.py  test_models.py  test_parser.py  test_tools_column.py  test_tools_read.py  test_tools_write.py
tests/fixtures/: gitbook_small.html  mixed_document.md
